# encryptor

./: .gitignore  fcryptor.py  pyproject.toml
src/: core.py  crypto.py
